Fix some spacing issues

--- a/styles.css
+++ b/styles.css
@@ -88,7 +88,7 @@ body {
 }
 
 h1, h2 {
-    font-family: "Helvetica Neue Extended", serif;
+    font-family: "Nimbus Sans", serif;
 }
 
 h1 {
@@ -96,7 +96,7 @@ h1 {
 }
 
 h2 {
-    margin-bottom: 0.5em;
+    margin-bottom: 0.7em;
     font-size: 1.3em;
 }
 
@@ -209,6 +209,8 @@ figure img {
     margin-top: 3em;
     margin-left: 4em;
     margin-right: 4em;
+    padding-right: 1em;
+    padding-left: 1em;
     max-width: 120em;
 }
 
@@ -217,6 +219,7 @@ figure img {
     width: 100%;
     height: 60vh;
     object-fit: cover;
+    min-height: 40em;
 }
 
 .gallery-overview {
@@ -393,14 +396,15 @@ figure img {
 
 #home-feed section {
     display: flex;
+    padding: 1em;
 }
 
 #home-feed section > div {
     width: 50%;
 }
 
-#home-feed section > div > p, h2, h1 {
-    margin-left: 1em !important;
+#home-feed > section > div > p, #home-feed > section > div > h2, #home-feed > section > div > h1 {
+    margin-left: 0em;
     margin-right: 1em;
     margin-bottom: 0.5em;
 }
@@ -410,8 +414,6 @@ figure img {
 }
 
 #home-feed .mood-image {
-    margin-left: 1em;
-    margin-right: 1em;
     width: 100%;
     max-height: 90vh;
     object-fit: cover;
